2014-10-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Code.mod:  tidied up text in qprintf0
	* gm2/gm2-compiler/M2Comp.mod:  tidied up text in qprintf0
	* gm2/gm2-gcc/m2top.def:  removed non needed procedure.
	* gm2/gm2-gcc/m2top.h:  removed non needed function.

2014-09-30      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  removed sckt.c from being built.
	* gm2/bnf/gm2l.bnf:  corrected import of procedures from Lists.
	* gm2/bnf/gm2m.bnf:  added import of DEALLOCATE.
	* gm2/gm2-compiler/M2Batch.def:  added export of LookupModule, LookupOuterModule.
	* gm2/gm2-compiler/M2Batch.mod:  added import of GetSym.
	* gm2/gm2-compiler/M2Comp.mod:  added descriptions for each pass.
	* gm2/gm2-compiler/M2Error.def:  (New procedure declarations) WarnFormat0, WarnFormat1.
	* gm2/gm2-compiler/M2Error.mod:  (New procedures) WarnFormat0, WarnFormat1.
	* gm2/gm2-compiler/M2Pass.def:  added IsPassC to export list.
	* gm2/gm2-compiler/M2Range.mod:  import BuildGreaterThanOrEqual.
	* gm2/gm2-compiler/P1SymBuild.mod:  added import of procedures from List.
	* gm2/gm2-libs-ch/dtoa.c:  corrected dates and tidied up spacing.
	* gm2/gm2-libs-ch/wrapc.c:  corrected dates and tidied up spacing.
	* m2/configure:  regenerated.
	* m2/configure.ac:  removed verbose messages.
	* make gm2.paranoid now works on Wheezy.

2014-09-28      Gaius Mulley <gaius@gnu.org>

	* libgm2/config.h.in:  removed HAVE_GETTIMEOFDAY, added HAVE_STRUCT_TIMEVAL,
	  removed TIME_WITH_SYS_TIME.
	* libgm2/configure:  rebuilt.
	* libgm2/configure.ac:  removed AC_HEADER_TIME.  Check for struct timeval.
	  Added GM2_UNDEF macro.  GM2_CHECK_LIB rewritten.
	* libgm2/libpim/Selective.c:  use HAVE_STRUCT_TIMEVAL rather than HAVE_SELECT.

2014-09-27      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/macroObjects.def:  fixed parameter names so that
	  implementation and definition modules match.
	* gm2/examples/pge/twoDsim.mod:  commented out include.